[package]
name = "capture"
version = "0.1.0"
edition = "2024"

[lib]
name = "capture"
path = "src/lib.rs"

[[bin]]
name = "capture"
path = "src/main.rs"

[[bin]]
name = "capture-gui"
path = "src/bin/capture-gui.rs"

[dependencies]
image = "0.25"
enigo = "0.6.1"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29.0"
screenshots = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
eframe = "0.31"
egui = "0.31"
chrono = "0.4"
rfd = "0.15"

# Platform-specific dependencies
[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.25.0"
core-foundation = "0.10.1"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_Threading",
] }
